[metadata]
name = unheatmap
url = https://github.com/dschwoerer/unheatmap
project_urls =
    Tracker = https://github.com/dschwoerer/unheatmap
    Documentation = https://github.com/dschwoerer/unheatmap
author = David Bold
author_email = dave@ipp.mpg.de
description = get data from heatmaps
license = GPLv3+
python_requires = >=3
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Visualization

[options]
setup_requires =
    setuptools>=42
    setuptools_scm[toml]>=3.4
    setuptools_scm_git_archive
packages = find:

[options.entry_points]
console_scripts =
    unheatmap = unheatmap.unheatmap:main